--- a/src/main/webapp/css/IdStyle.css
+++ b/src/main/webapp/css/IdStyle.css
@@ -20,6 +20,11 @@
 	height: 100%;
 	font-size: 16px;
 }
+#input-buscar-filtrado{
+	width: 100%;
+	height: 80%;
+	font-size: 14px;
+}
 #button-buscar{
 	width: 10%;
 	min-width: 30px;
