--- a/src/main/webapp/css/ClassStyle.css
+++ b/src/main/webapp/css/ClassStyle.css
@@ -172,7 +172,7 @@
 	padding-bottom: 10px;
 	padding-right: 10px;
 }
-.form-input-fecha{
+.form-input-lista{
 	margin-right: 10px;
 	font-size: 14px;
 }
