--- a/src/main/webapp/css/ClassStyle.css
+++ b/src/main/webapp/css/ClassStyle.css
@@ -16,7 +16,7 @@
 	align-content: center;
 	flex-direction: column;
 	vertical-align: middle;
-	overflow: hidden;
+	overflow: hidden;  
 }
 .contenedor{
 	width: auto;
@@ -58,6 +58,10 @@
 	width: 30px;
 	height: 30px;
 	margin-right: 10px;
+}
+.openMenuPerfil{
+	border-bottom-left-radius: 0px;
+	border-bottom-right-radius: 0px;
 }
 .oculto{
 	display: none;
