--- a/src/main/webapp/css/ClassStyle.css
+++ b/src/main/webapp/css/ClassStyle.css
@@ -183,3 +183,25 @@
 	margin-right: 10px;
 	font-size: 14px;
 }
+.fondoFormato{
+	width: auto;
+	height: 100%;
+	background-color: #FCFCFC;
+	padding: 40px;
+	overflow: hidden;
+	position: relative;
+}
+.contenido75{
+	width: 75%;
+	height: auto;
+	position: relative;
+}
+.contenedor-libros{
+	width: 100%;
+	height: 100%;
+	position: relative;
+	overflow: hidden;
+}
+.formato-texto{
+	text-align: justify;
+}
