--- a/src/main/webapp/css/IdStyle.css
+++ b/src/main/webapp/css/IdStyle.css
@@ -51,3 +51,13 @@
 	font-size: 30px;
 	cursor: pointer;
 }
+#perfil-imagen-edit{
+	width: 200px;
+	display: inline-block;
+	position: relative;
+}
+#perfil-info-edit{
+	width: 300px;
+	display: inline-block;
+	position: absolute;
+}
