Vista nueva obra sin funcionalidad (añadida la liga en el menu de usuario)
Vista nueva obra agregada, así como la liga desde el menu de usuario.

-falta revisar el textarea que no reconoce los saltos de renglón (envia el formulario en su lugar) por lo que no funciona como se esperaria

--- a/src/main/webapp/css/ClassStyle.css
+++ b/src/main/webapp/css/ClassStyle.css
@@ -205,3 +205,21 @@
 .formato-texto{
 	text-align: justify;
 }
+
+.contenido45{
+	width: 45%;
+	height: auto;
+	position: relative;
+}
+
+.generos-form tr{
+	marging-top: 5px;
+}
+
+.contenedor-boton{
+	width: 45%;
+	height: 100%;
+	position: relative;
+	overflow: hidden;
+	padding-top: 30px;
+}
