--- a/src/main/webapp/css/ClassStyle.css
+++ b/src/main/webapp/css/ClassStyle.css
@@ -10,6 +10,9 @@
 .derecha{
 	float: right;
 }
+.cursor-pointer{
+	cursor: pointer;
+}
 .texto-centro{
 	display: flex;
 	justify-content: center;
@@ -202,6 +205,28 @@
 	position: relative;
 	overflow: hidden;
 }
+.libro{
+	width: 15%;
+	min-width: 150px;
+	height: 240px;
+	padding: 15px;
+	margin-right: 1%;
+	margin-top: 10px;
+    position: relative;
+    display: inline-block;
+    float: left;
+    border: solid 2px #DDDDDD;
+    border-radius: 10px;
+}
+.portadaLibro{
+	width: 100%;
+	height: 200px;
+	display: block;
+}
+.descripcionLibro{
+	height: 40px;
+	display: block;
+}
 .formato-texto{
 	text-align: justify;
 }
@@ -226,5 +251,8 @@
 .estrella{
 	color: black;
 	font-size: 20px;
-	cursor: pointer;
+}
+.estrellaActiva{
+	color: red;
+	font-size: 20px;
 }
