Termino funcionalidad de los capitulos y cambio de las redirecciones de cancelación de algunas vistas

--- a/src/main/webapp/css/ClassStyle.css
+++ b/src/main/webapp/css/ClassStyle.css
@@ -270,7 +270,7 @@
 	background-color: #FF7375;
 }
 .cabeceraCapitulos{
-	width: 100%;
+	width: auto;
+	height: 120px;
 	display: block;
-	position: fixed;
 }
