Se agregó el mapeo,dao y bs de la entidad rankingObra, ya tiene la funcionalidad para rankear obra, esperando a hacer pruebas cuando estre corregida la base de datos (table de rankingObra sin llaves foraneas, campo de idUsuario en varchar y mal nombrado el id, debe der idRankingObra)

--- a/src/main/webapp/css/ClassStyle.css
+++ b/src/main/webapp/css/ClassStyle.css
@@ -176,6 +176,13 @@
 	border-radius: 10px;
 	background-color: #FCFCFC;
 }
+.form-config-completo{
+	width: 100%;
+	margin-top: 50px;
+	padding: 30px;
+	border-radius: 10px;
+	background-color: #FCFCFC;
+}
 .form-input-text{
 	width: 100%;
 	height: 100%;
