--- a/src/main/webapp/css/ClassStyle.css
+++ b/src/main/webapp/css/ClassStyle.css
@@ -281,3 +281,30 @@
 	height: 120px;
 	display: block;
 }
+.img-perfil-mini{
+	width: 40px;
+	height: 40px;
+	border-radius: 15px;
+	margin-right: 10px;
+	float: left;
+}
+.contenedor-comentarios{
+	background-color: white;
+	width: 100%;
+	max-width: 600px;
+	padding: 20px;
+	margin-top: 30px;
+	border-radius: 20px;
+	position: relative;
+}
+.comentario-individual{
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-bottom: solid 1px #000000;
+}
+.fecha-comentario{
+	color: #757575;
+	display: inline-block;
+	margin: 0 auto;
+	padding: 0;
+}
