--- a/src/main/webapp/css/ClassStyle.css
+++ b/src/main/webapp/css/ClassStyle.css
@@ -11,8 +11,6 @@
 	float: right;
 
 }
-
-
 .cursor-pointer{
 	cursor: pointer;
 }
@@ -51,6 +49,19 @@
 }
 .perfil:hover{
 	cursor: pointer;
+}
+.perfil-todos-usuarios{
+	width: 15%;
+	min-width: 150px;
+	height: 230px;
+	padding: 15px;
+	margin-right: 1%;
+	margin-top: 10px;
+    position: relative;
+    display: inline-block;
+    float: left;
+    border: solid 2px #DDDDDD;
+    border-radius: 10px;
 }
 .notificacion{
 	margin-right: 10px;
@@ -207,6 +218,10 @@
 	padding: 40px;
 	overflow: hidden;
 	position: relative;
+}
+.fondoFormato p{
+	padding-bottom: 15px;
+	text-align: justify;
 }
 .contenido75{
 	width: 75%;
